<resources>
    <string name="app_name">iVigilant</string>
    <string name="app_logo">Amex Alerter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ticket_deatail">TicketDetails</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_cc_email_address_optional">Enter CC Email Address (optional)</string>
    <string name="submit">Submit</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="old_pin">Old Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="enter_pin_number">Enter Pin Number</string>
    <string name="enter_captcha">Enter captcha</string>
    <string name="enter_pin">Enter your pin</string>
    <string name="show_log">Show log</string>
    <string name="change_admin_number"><u>change admin number?</u></string>
    <string name="enter_admin_new_number">Enter admin new number</string>
    <string name="enter_admin_old_number">Enter admin old number</string>
    <string name="email_setting">Email Setting</string>
    <string name="change_pin">Change Pin</string>
</resources>
