<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    tools:context="com.mindtree.amexalerter.SettingActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:layout_marginTop="20dp"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/change_details_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/email_setting"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/change_pin_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/change_pin"
                android:textColor="@color/colorLight"
                android:textStyle="bold" />
        </LinearLayout>

        <ViewFlipper
            android:id="@+id/view_flipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/setting"
            android:layout_centerInParent="true">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/admin_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_phone_number"
                            android:inputType="numberSigned"
                            android:maxLength="10"
                            android:textSize="@dimen/edit_text_size" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_input_layout1"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_email_address"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/edit_text_size" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_input_layout2"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/cc_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_cc_email_address_optional"
                            android:textSize="@dimen/edit_text_size" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_input_layout3"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/pin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_pin_number"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:textSize="@dimen/edit_text_size" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/text_input_layout4"
                        android:layout_marginTop="30sp"
                        android:background="@color/colorAccent"
                        android:text="@string/submit"
                        android:textColor="@color/colorWhite" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText

                            android:id="@+id/old_pin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/old_pin"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:textSize="@dimen/edit_text_size" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_input_layout5"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/new_pin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/new_pin"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:textSize="@dimen/edit_text_size" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_input_layout6"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/confirmPin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_pin"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:textSize="@dimen/edit_text_size" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/Change_pin_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/text_input_layout7"
                        android:layout_marginTop="30sp"
                        android:background="@color/colorAccent"
                        android:text="@string/change_pin"
                        android:textColor="@color/colorWhite" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </ViewFlipper>

        <TextView
            android:id="@+id/button_change_admin_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:text="@string/change_admin_number"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>