<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    tools:context="com.mindtree.amexalerter.AdminActivity">
    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/admin_number1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_admin_old_number"
                    android:inputType="numberSigned"
                    android:maxLength="10"
                    android:textSize="@dimen/edit_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_layout8"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/new_admin_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_admin_new_number"
                    android:inputType="numberSigned"
                    android:textSize="@dimen/edit_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_layout9"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pin2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_pin_number"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:textSize="@dimen/edit_text_size" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submit_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/text_input_layout10"
                android:layout_marginTop="30sp"
                android:background="@color/colorAccent"
                android:text="@string/submit"
                android:textColor="@color/colorWhite" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</ScrollView>
